[tool.poetry]
name = "mjw"
version = "0.1.0"
description = ""
authors = ["Morteza Jamali <mortezajamali4241@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.8.0"
GitPython = "^3.1.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install = "mjw.main:install"
