[tool.poetry]
name = "mjw"
version = "0.0.2-alpha"
description = "Moraj Lab workspace manager"
authors = ["Morteza Jamali <mortezajamali4241@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.morajlab.com/opensource/products/workspace"
repository = "https://github.com/morajlab/mjw"
documentation = "https://github.com/morajlab/mjw"
keywords = [
  "mjw",
  "workspace",
  "manager",
  "morajlab",
  "project",
  "monorepo",
  "multi-repo",
  "repository"
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.8.0"
GitPython = "^3.1.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install = "mjw.main:install"
mjw = "mjw.main:mjw"
sync = "mjw.main:sync"
